--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ permissions:
   contents: write
   checks: write
   id-token: write
-  administration: write
+  metadata: write
 
 jobs:
   test-pr:
