--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -7,24 +7,21 @@
     <description><![CDATA[
     ClipCraft extracts, formats, merges code from multiple files or directories.
     Respects .gitignore (if enabled), chunking, concurrency, compression, custom snippet metadata, etc.
-  ]]></description>
+    ]]></description>
 
     <change-notes><![CDATA[
     - Restored .gitignore respect in settings
     - Improved concurrency and ignoring images
     - Added scrolling to settings UI
     - Fixed mismatch between 'files copied' vs. actual included
-  ]]></change-notes>
+    ]]></change-notes>
 
-    <!-- For IntelliJ 2024.1 -->
+    <!-- Adjust "241" as appropriate for your IntelliJ build version -->
     <idea-version since-build="241" until-build="241.*"/>
-
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <notificationGroup id="ClipCraft Notifications" displayType="BALLOON"/>
-        <!-- Possibly your toolWindow or searchContributor elements here -->
-
         <applicationConfigurable
                 displayName="ClipCraft"
                 instance="com.clipcraft.ui.ClipCraftSettingsConfigurable"
@@ -32,7 +29,6 @@
     </extensions>
 
     <actions>
-        <!-- 'ClipCraft Copy' direct action -->
         <action
                 id="ClipCraftCopyAction"
                 class="com.clipcraft.actions.ClipCraftAction"
@@ -42,7 +38,6 @@
             <add-to-group group-id="CutCopyPasteGroup" anchor="last"/>
         </action>
 
-        <!-- Submenu with additional ClipCraft actions -->
         <group
                 id="ClipCraft.Submenu"
                 text="ClipCraft Toolbox"
@@ -56,27 +51,22 @@
                     class="com.clipcraft.actions.ClipCraftWizardAction"
                     text="Setup Wizard"
                     description="Guided configuration for ClipCraft"/>
-
             <action
                     id="ClipCraftResetDefaultsAction"
                     class="com.clipcraft.actions.ClipCraftResetDefaultsAction"
                     text="Reset Defaults"
                     description="Reset all ClipCraft settings to factory defaults"/>
-
             <action
                     id="ClipCraftSwitchProfileAction"
                     class="com.clipcraft.actions.ClipCraftSwitchProfileAction"
                     text="Switch Profile"
                     description="Switch among multiple ClipCraft profiles"/>
-
             <action
                     id="OpenClipCraftSettings"
                     class="com.intellij.ide.actions.ShowSettingsAction"
                     text="Open ClipCraft Settings"
                     description="Opens the ClipCraft settings page"/>
-
             <separator/>
-
             <action
                     id="ClipCraftAddSnippetFromCursorAction"
                     class="com.clipcraft.actions.ClipCraftAddSnippetFromCursorOrSelectionAction"
