feat: sanitize dynamic changenotes in build script
Improve dynamic changenotes generation by sanitizing commitment text and handling CDATA edge cases. Additionally, integrate changeNotes into the `patchPluginXml` task and update vendor email in plugin metadata.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,11 +1,7 @@
 <idea-plugin>
     <id>com.clipcraft</id>
     <name>ClipCraft</name>
-    <!-- This version can be overwritten by patchPluginXml OR match your Gradle version -->
-    <version>0.7.0-SNAPSHOT</version>
-
-    <vendor email="support@clipcraft.io" url="https://github.com/clipcraft">ClipCraft Inc.</vendor>
-
+    <vendor email="tabano86@gmail.com" url="https://github.com/clipcraft">ClipCraft</vendor>
     <description><![CDATA[
     ClipCraft extracts, formats, and merges code from multiple sources.
     Includes concurrency, .gitignore, metadata, macros, etc.
