--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,25 +1,22 @@
 <idea-plugin>
     <id>com.clipcraft</id>
     <name>ClipCraft</name>
-    <!-- Version is set by the build; do not include release-version -->
     <version>0.7.0-SNAPSHOT</version>
-
     <vendor email="tabano86@gmail.com" url="https://github.com/clipcraft">ClipCraft</vendor>
-
     <description><![CDATA[
-    ClipCraft extracts, formats, and merges code from multiple sources.
-    It includes support for concurrency, .gitignore handling, metadata,
-    macros, and more.
-  ]]></description>
-
-    <!-- The change-notes content will be overwritten by patchPluginXml -->
+ClipCraft extracts, formats, and merges code from multiple sources.
+It includes support for concurrency, .gitignore handling, metadata,
+macros, and more.
+]]></description>
     <change-notes><![CDATA[
-    Initial change-notes placeholder.
-  ]]></change-notes>
-
+Initial change-notes placeholder.
+]]></change-notes>
     <depends>com.intellij.modules.platform</depends>
-
     <extensions defaultExtensionNs="com.intellij">
+        <notificationGroup
+                id="ClipCraft Notifications"
+                displayType="BALLOON"
+                isLogByDefault="true" />
         <applicationConfigurable
                 displayName="ClipCraft"
                 instance="com.clipcraft.ui.ClipCraftSettingsRootConfigurable"
@@ -27,7 +24,6 @@
                 parentId="tools"
                 groupWeight="300"/>
     </extensions>
-
     <actions>
         <action id="ClipCraftCopyAction"
                 class="com.clipcraft.actions.ClipCraftAction"
@@ -36,14 +32,12 @@
                 icon="com.clipcraft.icons.ClipCraftIcons.CLIPCRAFT_16">
             <add-to-group group-id="CutCopyPasteGroup" anchor="last"/>
         </action>
-
         <group id="ClipCraft.Submenu"
                text="ClipCraft Toolbox"
                description="Extra ClipCraft features"
                popup="true"
                class="com.intellij.openapi.actionSystem.DefaultActionGroup">
             <add-to-group group-id="CutCopyPasteGroup" anchor="last"/>
-
             <action id="ClipCraftWizardAction"
                     class="com.clipcraft.actions.ClipCraftWizardAction"
                     text="Setup Wizard"
@@ -56,17 +50,14 @@
                     class="com.clipcraft.actions.ClipCraftSwitchProfileAction"
                     text="Switch Profile"
                     description="Switch among saved profiles"/>
-
             <action id="OpenClipCraftSettings"
                     class="com.intellij.ide.actions.ShowSettingsAction"
                     text="Open ClipCraft Settings"
                     description="Opens ClipCraft settings">
                 <add-to-group group-id="ToolsMenu" anchor="last"/>
             </action>
-
             <separator/>
         </group>
-
         <action id="ClipCraftAddSnippetFromCursorActionContext"
                 class="com.clipcraft.actions.ClipCraftAddSnippetFromCursorOrSelectionAction"
                 text="Add Snippet from Caret"
